# awesome-ai-skills

./: .gitignore  LICENSE  README.md  SECURITY.md  _audit-plugins-report.json  _index.json  _repo-meta.json
skills/legal-contract-review/: SKILL.md
skills/legal-contract-review/references/: legal-basis.md
skills/legal-research-assistant/: SKILL.md
skills/mukul975/acquiring-disk-image-with-dd-and-dcfldd/: SKILL.md
skills/mukul975/analyzing-api-gateway-access-logs/: SKILL.md
skills/mukul975/analyzing-apt-group-with-mitre-navigator/: SKILL.md
skills/mukul975/analyzing-browser-forensics-with-hindsight/: SKILL.md
skills/mukul975/analyzing-campaign-attribution-evidence/: SKILL.md
skills/mukul975/analyzing-certificate-transparency-for-phishing/: SKILL.md
skills/mukul975/analyzing-cloud-storage-access-patterns/: SKILL.md
skills/mukul975/analyzing-cobalt-strike-beacon-configuration/: SKILL.md
skills/mukul975/analyzing-command-and-control-communication/: SKILL.md
skills/mukul975/analyzing-cyber-kill-chain/: SKILL.md
skills/mukul975/analyzing-disk-image-with-autopsy/: SKILL.md
skills/mukul975/analyzing-dns-logs-for-exfiltration/: SKILL.md
skills/mukul975/analyzing-golang-malware-with-ghidra/: SKILL.md
skills/muthuishere/hand-drawn-diagrams/.tmp__muthuishere_hand-drawn-diagrams/scripts/: animate_excalidraw.py  edit_excalidraw.py  open_diagram.py  pyproject.toml  render_excalidraw.py  validate_excalidraw.py
skills/muthuishere/hand-drawn-diagrams/.tmp__muthuishere_hand-drawn-diagrams/scripts/tests/: test_render_excalidraw.py  test_validate_excalidraw.py
(+12622 files in other folders)
